tests/invalid/range_non_int_arg/main.py
def run_case() -> None:
    x: list[int] = [i for i in range(1.0, 5.0)]

if __name__ == "__main__":
    run_case()
